--- a/.travis.yml
+++ b/.travis.yml
@@ -47,6 +47,11 @@ install:
     # Install Drush and Behat
     - composer install
 
+    - sh -e /etc/init.d/xvfb start
+    - export DISPLAY=:99.0
+    - wget http://selenium.googlecode.com/files/selenium-server-standalone-2.31.0.jar
+    - java -jar selenium-server-standalone-2.31.0.jar > /dev/null &
+    - sleep 5	
 
 before_script:
 
